[package]
name = "nvisy-webhook"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default feature set (none for minimal dependencies)
default = []

# JSON Schema support: enables JsonSchema derives on Postgres types
# This allows Postgres types to be used directly in API documentation without
# manual schema implementations, while keeping the dependency optional
schema = ["dep:schemars", "nvisy-core/schema"]

[dependencies]
# Internal crates
nvisy-core = { workspace = true }

# Async runtime
async-trait = { workspace = true }

# Macros and utilities
thiserror = { workspace = true }

# Observability
tracing = { workspace = true }

# (De)serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# OpenAPI documentation (optional)
schemars = { workspace = true, optional = true }

# Commonly used datatypes
uuid = { workspace = true, features = ["serde", "v4", "v7"] }
jiff = { workspace = true, features = ["serde"] }
url = { workspace = true, features = ["serde"] }
