[package]
name = "nvisy-webhook"
description = "Webhook delivery types and traits for nvisy services"
readme = "./README.md"
keywords = ["webhook", "http", "delivery", "notifications", "events"]
categories = ["api-bindings", "network-programming"]

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default feature set (none for minimal dependencies)
default = []

# Reqwest-based HTTP client for webhook delivery
reqwest = ["dep:reqwest", "dep:hmac", "dep:sha2", "dep:hex"]

# CLI configuration support: enables clap derives for config types
config = ["reqwest", "dep:clap"]

# JSON Schema support: enables JsonSchema derives on Postgres types
# This allows Postgres types to be used directly in API documentation without
# manual schema implementations, while keeping the dependency optional
schema = ["dep:schemars", "nvisy-core/schema"]

[dependencies]
# Internal crates
nvisy-core = { workspace = true }

# Async runtime
async-trait = { workspace = true }

# Macros and utilities
thiserror = { workspace = true }

# Observability
tracing = { workspace = true }

# (De)serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [] }

# OpenAPI documentation (optional)
schemars = { workspace = true, optional = true }

# Commonly used datatypes
uuid = { workspace = true, features = ["serde", "v4", "v7"] }
jiff = { workspace = true, features = ["serde"] }
url = { workspace = true, features = ["serde"] }

# Reqwest feature dependencies (optional)
reqwest = { workspace = true, features = ["json"], optional = true }

# Security
hmac = { workspace = true, optional = true, features = [] }
sha2 = { workspace = true, optional = true, features = [] }
hex = { workspace = true, optional = true, features = [] }

# CLI (optional)
clap = { workspace = true, features = ["derive", "env"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
