[package]
name = "nvisy-webhook"
description = "Webhook delivery types and traits for nvisy services"
readme = "./README.md"
keywords = ["webhook", "http", "delivery", "notifications", "events"]
categories = ["api-bindings", "network-programming"]

version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Default feature set (none for minimal dependencies)
default = []

# Reqwest-based HTTP client for webhook delivery
reqwest = ["dep:reqwest", "dep:reqwest-middleware", "dep:reqwest-retry", "dep:reqwest-tracing", "dep:hmac", "dep:sha2", "dep:hex"]

# JSON Schema support: enables JsonSchema derives on webhook types
# This allows webhook types to be used directly in API documentation without
# manual schema implementations, while keeping the dependency optional
schema = ["dep:schemars"]

[dependencies]
# Internal crates
nvisy-base = { workspace = true }

# Async runtime
async-trait = { workspace = true }

# HTTP client & middleware
reqwest = { workspace = true, features = ["json"], optional = true }
reqwest-middleware = { workspace = true, optional = true }
reqwest-retry = { workspace = true, optional = true }
reqwest-tracing = { workspace = true, optional = true }

# Observability
tracing = { workspace = true }

# Encryption & Cryptography
hmac = { workspace = true, optional = true, features = [] }
sha2 = { workspace = true, optional = true, features = [] }

# Encoding
hex = { workspace = true, optional = true, features = [] }

# (De)serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [] }
schemars = { workspace = true, optional = true }

# Derive macros & utilities
thiserror = { workspace = true }
strum = { workspace = true, features = [] }

# Primitive datatypes
uuid = { workspace = true, features = ["serde", "v4", "v7"] }
jiff = { workspace = true, features = ["serde"] }
hipstr = { workspace = true, features = [] }

# Domain datatypes & data structures
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
