[package]
name = "nvisy-worker"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

# CLI configuration support
config = ["dep:clap", "nvisy-postgres/config", "nvisy-nats/config"]

[dependencies]
# Internal crates
nvisy-inference = { workspace = true }
nvisy-nats = { workspace = true }
nvisy-postgres = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["macros", "sync"] }
tokio-util = { workspace = true }
futures-util = { workspace = true }

# Macros and utilities
thiserror = { workspace = true }

# Observability
tracing = { workspace = true }

# (De)serialization
serde = { workspace = true, features = ["derive"] }

# CLI (optional)
clap = { workspace = true, features = ["derive", "env"], optional = true }
