# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "nvisy-data"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"
description = "Foundational traits for data I/O and vector operations"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["rt", "sync"] }
futures = { workspace = true, features = [] }

# Bytes
bytes = { workspace = true, features = [] }

# (De)serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [] }

# Derive macros & utilities
thiserror = { workspace = true, features = [] }
async-trait = { workspace = true, features = [] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
